# jeffutils

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  install.sh  meta.json
DEBIAN/: postinst
arrange/: Cargo.toml
b2sum/: Cargo.toml
blake2/: Cargo.toml
blockcopy/: Cargo.toml
bytedump/: Cargo.toml
calculate/: Cargo.toml
cd/: README.md
checksum/: Cargo.toml
chunk/: Cargo.toml
clear/: Cargo.toml  README.md
clear-cache/: Cargo.toml  README.md
clock/: Cargo.toml  README.md
compare/: Cargo.toml
conrun/: Cargo.toml
context/: Cargo.toml
convert/: Cargo.toml
countup/: Cargo.toml
cp/: Cargo.toml  README.md
cpucount/: Cargo.toml
crcsum/: Cargo.toml
create/: Cargo.toml  README.md
cutils/: Cargo.toml
dedup/: Cargo.toml
deploy/: Cargo.toml
dereference/: Cargo.toml
destroy/: Cargo.toml
devnode/: Cargo.toml
dirtheme/: Cargo.toml
disk/: Cargo.toml  README.md
diskfree/: Cargo.toml
dns/: Cargo.toml  README.md
echo/: Cargo.toml
encode32/: Cargo.toml
encode64/: Cargo.toml
env/: Cargo.toml
find/: Cargo.toml  README.md
flip/: Cargo.toml
flush/: Cargo.toml
format/: Cargo.toml
fscheck/: Cargo.toml  README.md
groups/: Cargo.toml  README.md
hash/: Cargo.toml  README.md
head/: Cargo.toml
help/: Cargo.toml  README.md
identity/: Cargo.toml
jail/: Cargo.toml
jeofetch/: Cargo.toml
jobs/: Cargo.toml  README.md
jsh/: Cargo.toml  README.md  test_history.rs  test_history2.rs  test_history3.rs
jsh/assets/font/: merge_font_colr.py
jsh/src/: main.rs
jsh/src/builtin/: mod.rs
jsh/src/completion/: mod.rs
jsh/src/executor/: mod.rs  pipeline.rs
jsh/src/parser/: lexer.rs  mod.rs  parser.rs
jsh/src/shell/: history.rs  mod.rs
jsh/src/utils/: mod.rs
jtop/: Cargo.toml  README.md
jutils-core/: Cargo.toml
kill/: Cargo.toml  README.md
kinfo/: Cargo.toml
leaf/: Cargo.toml
link/: Cargo.toml  README.md
ls/: Cargo.toml  README.md
machineid/: Cargo.toml
meld/: Cargo.toml
mem-test/: Cargo.toml  README.md
memory/: Cargo.toml  README.md
mirror/: Cargo.toml
mkdir/: Cargo.toml
mount/: Cargo.toml  README.md
mv/: Cargo.toml  README.md
net/: Cargo.toml  README.md
nice/: Cargo.toml  README.md
number/: Cargo.toml
online/: Cargo.toml
packaging/: build-pkg.sh  post-install.sh
paginate/: Cargo.toml
passwd/: Cargo.toml  README.md
pathcheck/: Cargo.toml
perms/: Cargo.toml  README.md
permutext/: Cargo.toml
persist/: Cargo.toml
ping/: Cargo.toml  README.md
pipefile/: Cargo.toml
poweroff/: Cargo.toml  README.md
primegen/: Cargo.toml
ps/: Cargo.toml  README.md
pwd/: Cargo.toml  README.md
read/: Cargo.toml
reboot/: Cargo.toml  README.md
reflow/: Cargo.toml
reload/: Cargo.toml
remove/: Cargo.toml  README.md
rename/: Cargo.toml  README.md
repeat/: Cargo.toml
resize/: Cargo.toml
resolve/: Cargo.toml
retab/: Cargo.toml
search/: Cargo.toml  README.md
segment/: Cargo.toml
sessions/: Cargo.toml
sessionuser/: Cargo.toml
sh/: Cargo.toml  README.md
sleep/: Cargo.toml  README.md
slice/: Cargo.toml
spaceused/: Cargo.toml
stat/: Cargo.toml  README.md
stem/: Cargo.toml
stitch/: Cargo.toml
sysinfo/: Cargo.toml  README.md
temppath/: Cargo.toml
(+171 files in other folders)
