[workspace]
members = [
    "clear-cache",
    "clear",
    "clock",
    "cp",
    "create",
    "dns",
    "find",
    "fscheck",
    "groups",
    "hash",
    "help",
    "jeofetch",
    "jobs",
    "jsh",
    "jtop",
    "kill",
    "kinfo",
    "link",
    "ls",
    "mem-test",
    "memory",
    "mount",
    "mv",
    "net",
    "nice",
    "passwd",
    "perms",
    "ping",
    "poweroff",
    "ps",
    "pwd",
    "reboot",
    "reload",
    "remove",
    "rename",
    "search",
    "sh",
    "sleep",
    "stat",
    "sysinfo",
    "texit",
    "time",
    "tree",
    "umount",
    "uptime",
    "uuid",
    "version",
    "which",
    "whoami",
    "zram-test",
    "zram",
    "read",
    "echo",
    "head",
    "tail",
    "wc",
    "env",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
rustyline = { path = "jsh/vendor/rustyline" }

