[workspace]
members = [
    "aly",
    "arrange",
    "b2sum",
    "blake2",
    "blockcopy",
    "bytedump",
    "calculate",
    "checksum",
    "chunk",
    "clear",
    "clear-cache",
    "clock",
    "compare",
    "conrun",
    "context",
    "convert",
    "cutils",
    "cp",
    "cpucount",
    "create",
    "crcsum",
    "dedup",
    "dereference",
    "deploy",
    "destroy",
    "devnode",
    "dirtheme",
    "diskfree",
    "dns",
    "echo",
    "encode32",
    "encode64",
    "env",
    "find",
    "flip",
    "flush",
    "format",
    "fscheck",
    "groups",
    "hash",
    "head",
    "help",
    "identity",
    "jeofetch",
    "jobs",
    "jsh",
    "jtop",
    "jutils-core",
    "jail",
    "kill",
    "kinfo",
    "leaf",
    "link",
    "ls",
    "machineid",
    "mem-test",
    "memory",
    "meld",
    "mirror",
    "mkdir",
    "mount",
    "mv",
    "net",
    "nice",
    "number",
    "online",
    "paginate",
    "passwd",
    "pathcheck",
    "persist",
    "perms",
    "permutext",
    "ping",
    "pipefile",
    "poweroff",
    "primegen",
    "ps",
    "pwd",
    "read",
    "reboot",
    "reflow",
    "reload",
    "remove",
    "rename",
    "repeat",
    "resolve",
    "resize",
    "retab",
    "search",
    "segment",
    "sessionuser",
    "sessions",
    "sh",
    "slice",
    "sleep",
    "spaceused",
    "stitch",
    "stem",
    "stat",
    "sysinfo",
    "temppath",
    "terminal",
    "termconfig",
    "texit",
    "time",
    "toposort",
    "touch",
    "tree",
    "umount",
    "unitformat",
    "untab",
    "uptime",
    "usercheck",
    "uuid",
    "version",
    "wc",
    "which",
    "whoami",
    "wrap",
    "zram",
    "zram-test",
    "countup",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true


