[package]
name = "jsh"
version = "1.2.9"
edition = "2024"

[dependencies]
jutils-core = { path = "../jutils-core" }
libc = "0.2"
rustyline = "14.0.0"
crossterm = "0.29"
glob = "0.3.3"
strsim = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }


